syntax = "proto3";

package malonaz.core.codegen.rpc.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/malonaz/core/genproto/codegen/rpc";

extend google.protobuf.MethodOptions {
  // Type of the resource we wish to create, like 'user.v1.User'.
  string message_type = 98330;
  MethodType method_type = 98331;
  CreateOpts create = 98332;
  UpdateOpts update = 98333;
  DeleteOpts delete = 98334;
  GetOpts get = 98335;
  ListOpts list = 98336;
}

message CreateOpts {
  // If true, we generate the create method.
  bool generate = 1;
  // The uuid namespace we will use to create the resource.
  string uuid_namespace = 2;
  // If true, we expect a post insert function.
  bool pre_fn = 3;
  // If true, we expect a post insert function.
  bool post_fn = 4;
}

message UpdateOpts {
  // If true, we generate the update method.
  bool generate = 1;
  // If true, we expect a post insert function.
  bool pre_fn = 2;
  // If true, we expect a post insert function.
  bool post_fn = 3;
}

message DeleteOpts {
  // If true, we generate the delete method.
  bool generate = 1;
  // If true, we expect a pre delete function.
  bool pre_fn = 2;
}

message GetOpts {
  // If true, we generate the get method.
  bool generate = 1;
}

message ListOpts {
  // If true, we generate the create method.
  bool generate = 1;
  // If true, we expect a pre list function.
  bool pre_fn = 2;
  // If true, we expect a post list function.
  bool post_fn = 3;
}

// Standard method types for resource-oriented APIs.
// Based on AIP-136 (https://google.aip.dev/136).
enum MethodType {
  // Unspecified standard method.
  METHOD_TYPE_UNSPECIFIED = 0;

  // Create a new resource.
  // Maps to HTTP POST on a collection (e.g., POST /v1/users).
  // Request: parent + resource, Response: resource.
  METHOD_TYPE_CREATE = 1;

  // Retrieve a single resource by identifier.
  // Maps to HTTP GET on a resource (e.g., GET /v1/users/123).
  // Request: resource name, Response: resource.
  METHOD_TYPE_GET = 2;

  // Update an existing resource.
  // Maps to HTTP PATCH or PUT on a resource (e.g., PATCH /v1/users/123).
  // Request: resource + update_mask, Response: resource.
  METHOD_TYPE_UPDATE = 3;

  // Delete a resource.
  // Maps to HTTP DELETE on a resource (e.g., DELETE /v1/users/123).
  // Request: resource name, Response: empty or deleted resource.
  METHOD_TYPE_DELETE = 4;

  // List resources in a collection.
  // Maps to HTTP GET on a collection (e.g., GET /v1/users).
  // Request: parent + page_size + page_token, Response: resources + next_page_token.
  METHOD_TYPE_LIST = 5;
}
